--- a/src/static/stylesheets/base.scss
+++ b/src/static/stylesheets/base.scss
@@ -37,7 +37,7 @@ body,
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  height: 100%;
+  max-height: 100%;
   max-width: 100%;
   width: 100%;
 }
