--- a/src/static/stylesheets/base.scss
+++ b/src/static/stylesheets/base.scss
@@ -89,8 +89,8 @@ main {
 }
 
 .grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  background-color: rgba(255 255 255 80%);
+  border: 1px solid rgba(0 0 0 80%);
   font-size: 30px;
   padding: 20px;
   text-align: center;
