--- a/src/static/stylesheets/navigation.scss
+++ b/src/static/stylesheets/navigation.scss
@@ -27,15 +27,14 @@
     }
   }
 
-  &__section{
+  &__section {
     align-items: center;
     color: $blue3;
     cursor: pointer;
     display: flex;
     font-size: 1.5em;
     height: 80px;
-    padding: 20px 10px 0 10px;
+    padding: 20px 10px 0;
     position: relative;
   }
-
 }
